# chess-tac-toe

./: Cargo.toml  Cross.toml  build.rs  tarpaulin-report.html  test.sh
client/: Cargo.toml  Dioxus.toml  build.rs  index.html  style.css
client/src/: lib.rs  main.rs  utils.rs
client/src/components/: ChessBoard.rs  TicBoard.rs  mod.rs
client/src/components/styles/: chess.css  main.css  tic.css
client/src/pages/: GameScreen.rs  MainScreen.rs  mod.rs
coverage/: tarpaulin-report.html
helpers/: Cargo.toml  build.rs
helpers/src/: chess.rs  lib.rs  tictactoe.rs
helpers/tests/: Kasparov_Karpov.txt  arg_carmined.txt  chess_test.rs
proto/: chesstactoe.proto
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  server.rs
src/client-react/: .gitignore  package-lock.json  package.json
src/client-react/src/: App.tsx
src/client-react/src/pages/: MainPage.tsx
src/lib/: lib.rs
src/proto/: ChesstactoeServiceClientPb.ts  chesstactoe_pb.d.ts
