
[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[lib]
name = "helpers"
path = "src/lib/lib.rs"

[package]
name = "chess-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
regex = "1.6.0"
tokio = {version = "1.21.0", features = ["rt-multi-thread", "macros"]}
tokio-stream = "0.1.9"
tonic = "0.8.1"

[build-dependencies]
tonic-build = "0.8.0"
