[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-desktop = {version = "0.3.0"}
dioxus = {version = "0.3.1"}
prost = "0.11.0"
regex = "1.6.0"
tonic = "0.8.2"
uuid = {version = "1.1.2"}
helpers = {path = "../helpers"}
tokio = {version = "1.21.0", features = ["rt-multi-thread", "macros"]}
base64 = "0.21.0"
include_dir = "0.7.3"
once_cell = "1.17.0"
dioxus-router = "0.3.0"
dioxus-free-icons = { version = "0.6.0", features = ["ionicons"] }

[build-dependencies]
tonic-build = "0.8.0"
