[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-desktop = { version = "0.3.0", default-features = false, features = ["tokio", "tokio_runtime", "tray", "interprocess"] }
dioxus = { version = "0.3.2", default-features = false, features = ["dioxus-core-macro", "dioxus-hooks", "dioxus-html", "dioxus-rsx", "hooks", "html", "macro"] }
prost = "0.11.9"
regex = "1.9.1"
tonic = "0.9.2"
uuid = {version = "1.4.0"}
helpers = {path = "../helpers"}
tokio = {version = "1.29.1", features = ["rt-multi-thread", "macros"]}
base64 = "0.21.2"
include_dir = "0.7.3"
once_cell = "1.18.0"
dioxus-router = "0.3.0"
dioxus-free-icons = { version = "0.6.0", features = ["ionicons"] }
futures = "0.3.28"

[build-dependencies]
tonic-build = "0.9.2"
