[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
rand = "0.8.5"
regex = "1.6.0"
tonic = "0.8.1"
uuid = {version = "1.1.2", features = ["v4"]}

[build-dependencies]
tonic-build = "0.8.0"
