[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
prost = "0.11.0"
rand = "0.8.5"
regex = "1.6.0"
tonic = "0.9.2"
uuid = {version = "1.1.2", features = ["v4"]}

[dev-dependencies]
once_cell = "1.17.0"

[build-dependencies]
tonic-build = "0.9.2"
