
[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
regex = "1.9.1"
tokio = {version = "1.29.1", features = ["rt-multi-thread", "macros"]}
tokio-stream = "0.1.14"
tonic = "0.9.2"
uuid = {version = "1.4.0", features = ["v4"]}
helpers = { path = "../helpers"}
dashmap = "5.4.0"
base64 = "0.21.2"

[build-dependencies]
tonic-build = "0.9.2"
